/*
 * Copyright (2024) The Delta Lake Project Authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = 'proto3';

package delta.connect;

option java_multiple_files = true;
option java_package = "io.delta.connect.proto";

// Information required to access a Delta table either by name or by path.
message DeltaTable {
  // (Required)
  oneof access_type {
    Path path = 1;
    string table_or_view_name = 2;
  }

  message Path {
    // (Required) Path to the Delta table.
    string path = 1;

    // (Optional) Hadoop configuration used to access the file system.
    map<string, string> hadoop_conf = 2;
  }
}
